Fix hero image overflow

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ button {
   color: var(--color-primary-100);
   background-color: var(--color-accent-500);
   font-weight: var(--font-weight-black);
+  font-size: var(--font-size-xs);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
@@ -160,8 +161,8 @@ h1 {
 
 h2 {
   font-size: var(--font-size-md);
-  font-weight: var(--font-weight-black);
   line-height: var(--line-height-md);
+  font-weight: var(--font-weight-black);
 }
 
 .overline {
@@ -176,6 +177,9 @@ h2 {
   margin: 3rem auto 3.175rem;
 }
 
+.hero {
+  overflow-x: hidden;
+}
 .hero__img {
   width: 108%;
   height: auto;
@@ -192,10 +196,12 @@ h2 {
 }
 
 nav {
+  border: 1px solid var(--color-neutral-800);
+  padding-inline: 2rem;
   margin: 2rem auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 1rem;
 }
 
@@ -288,6 +294,7 @@ footer {
 
 .footer > p {
   margin-top: 1.5rem;
+  font-size: var(--font-size-sm); /* 18px */
 }
 
 .footer > button {
